[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DL_Track"
version = "0.1.0"
authors = [
  { name="Paul Ritsche", email="paul.ritsche@unibas.ch" },
  { name="Olivier Seynnes", email="oliviers@nih.no" },
  { name="Neil Cronin", email="neil.j.cronin@jyu.fi" },
]
description = "Automatic analysis of logitudinal muscle ultrasonography images"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/PaulRitsche/DLTrack_US"
"Bug Tracker" = "https://github.com/PaulRitsche/DLTrack_US/issues"
